# mimeapp

./: flake.nix  mime-manager.cabal
src/: MimeManager.hs
